--- a/index.html
+++ b/index.html
@@ -17,25 +17,65 @@
                <img src="./img/icons/logo.svg" alt="logo">
             </a>
             <nav class="header__menu menu">
-               <ul class="menu__list">
-                  <li class="menu__item"><a href="" class="menu__link">HOME</a></li>
-                  <li class="menu__item"><a href="" class="menu__link">FEATURES</a></li>
-                  <li class="menu__item"><a href="" class="menu__link">SUPPORT</a></li>
-                  <li class="menu__item"><a href="" class="menu__link">CONTACT US</a></li>
-               </ul>
+               <nav id="menu" class="menu__body">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a href="" class="menu__link">HOME</a></li>
+                     <li class="menu__item"><a href="" class="menu__link">FEATURES</a></li>
+                     <li class="menu__item"><a href="" class="menu__link">SUPPORT</a></li>
+                     <li class="menu__item"><a href="" class="menu__link">CONTACT US</a></li>
+                  </ul>
+               </nav>
             </nav>
             <div class="header__button">
-               <a href="" class="button button_blue">DOWNLOAD</a>
+               <a href="" class="button button_blue">DOWNLOAD</a>       
+         </div>
+   </div>
+      </header>
+   <main class="main">
+      <section class="get-started">
+         <div class="get-started__container">
+            <div class="get-started__content">
+               <div class="get-started__block-text block-text">
+                  <h1 class="block-text__title block-text__title_blue">Take care of yours family’s <span>health.</span></h1>
+                  <div class="block-text__text">
+                     <p> All in one destination for COVID-19 health queries.</p>
+                     <p> Consult 10,000+ health workers about your concerns.</p>
+                  </div>
+                  <a href="" class="block-text__button button">GET STARTED</a>
+               </div>
+            </div>
+            <div class="get-started__image">
+               <img src="/img/main-block/image1.svg" alt="image1">
+            </div>
+            <div class="get-started__video">
+               <a href="" class="video-get-started">
+                  <div class="video-get-started__icon">
+                     <img src="/img/main-block/icon1.svg" alt="play">
+                  </div>
+                  <div class="video-get-started__body">
+                     <div class="video-get-started__title">Stay safe with GoCorona</div>
+                     <div class="video-get-started__text">Watch Video</div>
+                  </div>
+               </a>  
             </div>
          </div>
-      </header>
-
-
-
-
-
-<main class="main"></main>
-<footer class="footer"></footer>
+      </section>
+      <section class="stay-safe">
+         <div class="stay-safe__container">
+            <div class="stay-safe__image">
+               <img src="/img/main-block/image2.svg" alt="image2">
+            </div>
+            <div class="stay-safe__content">
+               <div class="stay-safe__block-text block-text">
+                  <div class="block-text__title pink">Stay safe with Go<span>Corona.</span></div>
+                  <div class="block-text__text">24x7 Support and user friendly mobile platform to bring healthcare to yoRur fingertips. Signup and be a part of the new health culture.</div>
+               </div>
+               <a href="" class="block-text__button button">Features</a>
+            </div>
+         </div>
+      </section>
+   </main>
+   <footer class="footer"></footer>
    </div>
   </body>
 </html>
