--- a/index.html
+++ b/index.html
@@ -67,15 +67,96 @@
             </div>
             <div class="stay-safe__content">
                <div class="stay-safe__block-text block-text">
-                  <div class="block-text__title pink">Stay safe with Go<span>Corona.</span></div>
+                  <div class="block-text__title block-text__title_pink">Stay safe with Go<span>Corona.</span></div>
                   <div class="block-text__text">24x7 Support and user friendly mobile platform to bring healthcare to yoRur fingertips. Signup and be a part of the new health culture.</div>
                </div>
                <a href="" class="block-text__button button">Features</a>
             </div>
          </div>
       </section>
+      <section class="experts">
+         <div class="experts__container">
+            <div class="experts__statistics statistics-experts">
+               <div class="statistics-experts__body body-statistics-experts">
+                  <div class="body-statistics-experts__item">
+                     <div class="body-statistics-experts__value">2m</div>
+                     <div class="body-statistics-experts__text">Users</div>
+                  </div>
+                  <div class="body-statistics-experts__item">
+                     <div class="body-statistics-experts__value">78</div>
+                     <div class="body-statistics-experts__text">Countries</div>
+                  </div>
+                  <div class="body-statistics-experts__item">
+                     <div class="body-statistics-experts__value">10,000+</div>
+                     <div class="body-statistics-experts__text">Medical experts</div>
+                  </div>
+               </div>
+               <div class="statistics-experts__decor statistics-experts__decor_1"></div>
+               <div class="statistics-experts__decor statistics-experts__decor_2"></div>
+               <div class="statistics-experts__decor statistics-experts__decor_3"></div>
+            </div>
+            <div class="experts__talk">
+                  <div class="experts__content">
+                     <div class="experts__block-text block-text">
+                        <div class="block-text__title block-text__title_violet">Talk to <span>experts.</span></div>
+                        <div class="block-text__text">Book appointments or submit queries into thousands of forums concerning health issues and prevention against noval Corona Virus.</div>
+                     </div>
+                     <a href="" class="block-text__button button">Features</a>
+                  </div>
+                  <div class="experts__video">
+                     <iframe src="https://youtu.be/hT_nvWreIhg" frameborder="0"></iframe>
+                  </div>
+            </div>
+         </div>
+      </section>
+      <section class="healthcare">
+         <div class="healthcare__container">
+            <div class="healthcare__fingertips">
+               <div class="healthcare__block-text block-text">
+                  <div class="block-text__title block-text__title_pink"><span>Healthcare</span> at your Fingertips.</div>
+                  <div class="block-text__text block-text__text_center">Bringing premium healthcare features to your fingertips. User friendly mobile platform to bring healthcare to your fingertips. Signup and be a part of the new health culture.</div>
+               </div>
+            </div>
+            <div class="healthcare__tips healthcare-tips-body">
+                  <div class="healthcare-tips-body__item healthcare-tips-body__item_item-1">
+                     <div class="item__icon">
+                        <img src="/img/main-block/item1.svg" alt="">
+                     </div>
+                     <div class="item__title">Symptom Checker</div>
+                     <div class="item__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
+                  </div>
+                  <div class="healthcare-tips-body__item healthcare-tips-body__item_item-2">
+                     <div class="item__icon">
+                        <img src="/img/main-block/item2.svg" alt="">
+                     </div>
+                     <div class="item__title">24x7 Medical support</div>
+                     <div class="item__text">Consult with 10,000+ health workers about your concerns.</div>
+                  </div>
+                  <div class="healthcare-tips-body__item healthcare-tips-body__item_item-3">
+                     <div class="item__icon">
+                        <img src="/img/main-block/item3.svg" alt="">
+                     </div>
+                     <div class="item__title">Conditions</div>
+                     <div class="item__text">Bringing premium healthcare features to your fingertips.</div>
+                  </div>
+                  <div class="healthcare-tips-body__decor-1"></div>
+                  <div class="healthcare-tips-body__decor-2"></div>
+                  <div class="healthcare-tips-body__decor-3"></div>
+                  <div class="healthcare-tips-body__decor-4"></div>
+            </div>
+         </div>
+      </section>
    </main>
-   <footer class="footer"></footer>
+   <footer class="footer">
+      <div class="mobile-icons icons-mobile">
+         <div class="icons-mobile mobile-icons_andriod">
+            <img src="/img/main-block/android.svg" alt="">
+         </div>
+         <div class="icons-mobile mobile-icons_apple">
+            <img src="/img/main-block/ios.svg" alt="">
+         </div>
+      </div>
+   </footer>
    </div>
   </body>
 </html>
