--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="stay-safe__content">
                <div class="stay-safe__block-text block-text">
-                  <div class="block-text__title block-text__title_pink">Stay safe with Go<span>Corona.</span></div>
+                  <h2 class="block-text__title block-text__title_pink">Stay safe with Go<span>Corona.</span></h2>
                   <div class="block-text__text">24x7 Support and user friendly mobile platform to bring healthcare to yoRur fingertips. Signup and be a part of the new health culture.</div>
                </div>
                <a href="" class="block-text__button button">Features</a>
@@ -98,51 +98,51 @@
             <div class="experts__talk">
                   <div class="experts__content">
                      <div class="experts__block-text block-text">
-                        <div class="block-text__title block-text__title_violet">Talk to <span>experts.</span></div>
+                        <h2 class="block-text__title block-text__title_violet">Talk to <span>experts.</span></h2>
                         <div class="block-text__text">Book appointments or submit queries into thousands of forums concerning health issues and prevention against noval Corona Virus.</div>
                      </div>
                      <a href="" class="block-text__button button">Features</a>
                   </div>
                   <div class="experts__video">
-                     <iframe src="https://youtu.be/hT_nvWreIhg" frameborder="0"></iframe>
+                     <iframe src="https://www.youtube.com/embed/sohdv21BVNI" frameborder="0"></iframe>
                   </div>
             </div>
          </div>
       </section>
       <section class="healthcare">
          <div class="healthcare__container">
-            <div class="healthcare__fingertips">
-               <div class="healthcare__block-text block-text">
-                  <div class="block-text__title block-text__title_pink"><span>Healthcare</span> at your Fingertips.</div>
-                  <div class="block-text__text block-text__text_center">Bringing premium healthcare features to your fingertips. User friendly mobile platform to bring healthcare to your fingertips. Signup and be a part of the new health culture.</div>
-               </div>
+            <div class="healthcare__block-text block-text_center">
+               <h2 class="block-text__title block-text__title_pink"><span>Healthcare</span> at your Fingertips.</h2>
+               <div class="block-text__text block-text__text_mw">Bringing premium healthcare features to your fingertips. User friendly mobile platform to bring healthcare to your fingertips. Signup and be a part of the new health culture.</div>
             </div>
-            <div class="healthcare__tips healthcare-tips-body">
-                  <div class="healthcare-tips-body__item healthcare-tips-body__item_item-1">
-                     <div class="item__icon">
+            <div class="healthcare__items">
+               <div class="healthcare__column item-healthcare_1">
+                  <div class="healthcare__item item-healthcare ">
+                     <div class="item-healthcare__icon">
                         <img src="/img/main-block/item1.svg" alt="">
                      </div>
-                     <div class="item__title">Symptom Checker</div>
-                     <div class="item__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
-                  </div>
-                  <div class="healthcare-tips-body__item healthcare-tips-body__item_item-2">
-                     <div class="item__icon">
+                     <div class="item-healthcare__title">Symptom Checker</div>
+                     <div class="item-healthcare__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
+                     </div>
+               </div>
+               <div class="healthcare__column item-healthcare_2">
+                  <div class="healthcare__item item-healthcare ">
+                     <div class="item-healthcare__icon">
                         <img src="/img/main-block/item2.svg" alt="">
                      </div>
-                     <div class="item__title">24x7 Medical support</div>
-                     <div class="item__text">Consult with 10,000+ health workers about your concerns.</div>
+                     <div class="item-healthcare__title">24x7 Medical support</div>
+                     <div class="item-healthcare__text">Consult with 10,000+ health workers about your concerns.</div>
                   </div>
-                  <div class="healthcare-tips-body__item healthcare-tips-body__item_item-3">
-                     <div class="item__icon">
+               </div>
+               <div class="healthcare__column item-healthcare_3">
+                  <div class="healthcare__item item-healthcare item-healthcare_3">
+                     <div class="item-healthcare__icon">
                         <img src="/img/main-block/item3.svg" alt="">
                      </div>
-                     <div class="item__title">Conditions</div>
-                     <div class="item__text">Bringing premium healthcare features to your fingertips.</div>
+                     <div class="item-healthcare__title">Conditions</div>
+                     <div class="item-healthcare__text">Bringing premium healthcare features to your fingertips.</div>
                   </div>
-                  <div class="healthcare-tips-body__decor-1"></div>
-                  <div class="healthcare-tips-body__decor-2"></div>
-                  <div class="healthcare-tips-body__decor-3"></div>
-                  <div class="healthcare-tips-body__decor-4"></div>
+               </div>
             </div>
          </div>
       </section>
