--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                <div class="block-text__text block-text__text_mw">Bringing premium healthcare features to your fingertips. User friendly mobile platform to bring healthcare to your fingertips. Signup and be a part of the new health culture.</div>
             </div>
             <div class="healthcare__items">
-               <div class="healthcare__column item-healthcare_1">
+               <div class="healthcare__column healthcare__column_1">
                   <div class="healthcare__item item-healthcare ">
                      <div class="item-healthcare__icon">
                         <img src="/img/main-block/item1.svg" alt="">
@@ -125,7 +125,7 @@
                      <div class="item-healthcare__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
                      </div>
                </div>
-               <div class="healthcare__column item-healthcare_2">
+               <div class="healthcare__column healthcare__column_2">
                   <div class="healthcare__item item-healthcare ">
                      <div class="item-healthcare__icon">
                         <img src="/img/main-block/item2.svg" alt="">
@@ -134,7 +134,7 @@
                      <div class="item-healthcare__text">Consult with 10,000+ health workers about your concerns.</div>
                   </div>
                </div>
-               <div class="healthcare__column item-healthcare_3">
+               <div class="healthcare__column healthcare__column_3">
                   <div class="healthcare__item item-healthcare item-healthcare_3">
                      <div class="item-healthcare__icon">
                         <img src="/img/main-block/item3.svg" alt="">
