Menu Anchor added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav class="header__menu menu">
                <nav id="menu" class="menu__body">
                   <ul class="menu__list">
-                     <li class="menu__item"><a href="" class="menu__link">HOME</a></li>
-                     <li class="menu__item"><a href="" class="menu__link">FEATURES</a></li>
-                     <li class="menu__item"><a href="" class="menu__link">SUPPORT</a></li>
-                     <li class="menu__item"><a href="" class="menu__link">CONTACT US</a></li>
+                     <li class="menu__item"><a href="#get-started" class="menu__link">HOME</a></li>
+                     <li class="menu__item"><a href="#stay-safe" class="menu__link">FEATURES</a></li>
+                     <li class="menu__item"><a href="#experts" class="menu__link">SUPPORT</a></li>
+                     <li class="menu__item"><a href="#healthcare" class="menu__link">CONTACT US</a></li>
                   </ul>
                </nav>
             </nav>
@@ -32,7 +32,7 @@
    </div>
       </header>
    <main class="main">
-      <section class="get-started">
+      <section id="get-started" class="get-started">
          <div class="get-started__container">
             <div class="get-started__content">
                <div class="get-started__block-text block-text">
@@ -60,7 +60,7 @@
             </div>
          </div>
       </section>
-      <section class="stay-safe">
+      <section id="stay-safe" class="stay-safe">
          <div class="stay-safe__container">
             <div class="stay-safe__image">
                <img src="/img/main-block/image2.svg" alt="image2">
@@ -74,7 +74,7 @@
             </div>
          </div>
       </section>
-      <section class="experts">
+      <section id="experts" class="experts">
          <div class="experts__container">
             <div class="experts__statistics statistics-experts">
                <div class="statistics-experts__body body-statistics-experts">
@@ -109,7 +109,7 @@
             </div>
          </div>
       </section>
-      <section class="healthcare">
+      <section id="healthcare" class="healthcare">
          <div class="healthcare__container">
             <div class="healthcare__block-text block-text_center">
                <h2 class="block-text__title block-text__title_pink"><span>Healthcare</span> at your Fingertips.</h2>
@@ -146,6 +146,7 @@
             </div>
          </div>
       </section>
+      <script src="/js/index.js"></script>
    </main>
    <footer class="footer">
       <div class="mobile-icons icons-mobile">
