Images links changed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="header">
         <div class="header__container">
           <a href="" class="header__logo">
-            <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/icons/logo.svg" alt="logo" />
+            <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/icons/logo.svg" alt="logo" />
           </a>
           <nav class="header__menu menu">
             <nav id="menu" class="menu__body">
@@ -61,12 +61,12 @@
               </div>
             </div>
             <div class="get-started__image">
-              <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/image1.svg" alt="image1" />
+              <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/image1.svg" alt="image1" />
             </div>
             <div class="get-started__video">
               <a href="" class="video-get-started">
                 <div class="video-get-started__icon">
-                  <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/icon1.svg" alt="play" />
+                  <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/icon1.svg" alt="play" />
                 </div>
                 <div class="video-get-started__body">
                   <div class="video-get-started__title">
@@ -81,7 +81,7 @@
         <section id="stay-safe" class="stay-safe">
           <div class="stay-safe__container">
             <div class="stay-safe__image">
-              <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/image2.svg" alt="image2" />
+              <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/image2.svg" alt="image2" />
             </div>
             <div class="stay-safe__content">
               <div class="stay-safe__block-text block-text">
@@ -166,7 +166,7 @@
               <div class="healthcare__column healthcare__column_1">
                 <div class="healthcare__item item-healthcare">
                   <div class="item-healthcare__icon">
-                    <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/item1.svg" alt="" />
+                    <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/item1.svg" alt="" />
                   </div>
                   <div class="item-healthcare__title">Symptom Checker</div>
                   <div class="item-healthcare__text">
@@ -178,7 +178,7 @@
               <div class="healthcare__column healthcare__column_2">
                 <div class="healthcare__item item-healthcare">
                   <div class="item-healthcare__icon">
-                    <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/item2.svg" alt="" />
+                    <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/item2.svg" alt="" />
                   </div>
                   <div class="item-healthcare__title">24x7 Medical support</div>
                   <div class="item-healthcare__text">
@@ -189,7 +189,7 @@
               <div class="healthcare__column healthcare__column_3">
                 <div class="healthcare__item item-healthcare item-healthcare_3">
                   <div class="item-healthcare__icon">
-                    <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/item3.svg" alt="" />
+                    <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/item3.svg" alt="" />
                   </div>
                   <div class="item-healthcare__title">Conditions</div>
                   <div class="item-healthcare__text">
@@ -205,10 +205,10 @@
       <footer class="footer">
         <div class="mobile-icons icons-mobile">
           <div class="icons-mobile mobile-icons_andriod">
-            <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/android.svg" alt="" />
+            <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/android.svg" alt="" />
           </div>
           <div class="icons-mobile mobile-icons_apple">
-            <img src="https://github.com/shakirova-g/Go-corona/blob/gh-pages/img/main-block/ios.svg" alt="" />
+            <img src="https://raw.githubusercontent.com/shakirova-g/Go-corona/gh-pages/img/main-block/ios.svg" alt="" />
           </div>
         </div>
       </footer>
